<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.jikoo</groupId>
  <artifactId>enchantableblocks</artifactId>
  <name>EnchantableBlocks</name>
  <version>3.0.2-SNAPSHOT</version>
  <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.source>16</maven.compiler.source>
    <maven.compiler.target>16</maven.compiler.target>
    <versions.fastutil>8.5.4</versions.fastutil>
  </properties>

  <profiles>
    <profile>
      <id>sonarcloud</id>
      <properties>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
        <sonar.projectKey>Jikoo_EnchantableBlocks</sonar.projectKey>
        <sonar.organization>jikoo</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.language>java</sonar.language>
        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
        <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
      </properties>

      <build>
        <plugins>
          <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>0.8.7</version>
            <executions>
              <execution>
                <id>prepare-agent</id>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
              </execution>
              <execution>
                <id>report</id>
                <goals>
                  <goal>report</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <repositories>
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations</artifactId>
      <version>22.0.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.17.1-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>it.unimi.dsi</groupId>
      <artifactId>fastutil</artifactId>
      <version>${versions.fastutil}</version>
      <!-- Spigot's library loading feature will provide FastUtil. -->
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.github.jikoo</groupId>
      <artifactId>PlanarWrappers</artifactId>
      <version>2.2.2</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.7.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest</artifactId>
      <version>2.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.github.seeseemelk</groupId>
      <artifactId>MockBukkit-v1.17</artifactId>
      <version>1.7.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.jparams</groupId>
      <artifactId>to-string-verifier</artifactId>
      <version>1.4.8</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <pluginRepositories>
    <pluginRepository>
      <id>maven-snapshots</id>
      <url>https://repository.apache.org/content/repositories/snapshots/</url>
    </pluginRepository>
  </pluginRepositories>

  <build>
    <finalName>${project.name}</finalName>

    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.3.0-SNAPSHOT</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <!--
                ~ Unfortunately, the minimizeJar option actually breaks build.
                ~ As a (hopefully temporary) workaround, explicitly declare classes used.
                ~ Watch MSHADE-394 for a fix.
               -->
              <filters>
                <filter>
                  <artifact>com.github.jikoo:PlanarWrappers</artifact>
                  <includes>
                    <include>com/github/jikoo/planarwrappers/collections/BlockMap.class</include>
                    <include>com/github/jikoo/planarwrappers/collections/FastMap.class</include>
                    <include>com/github/jikoo/planarwrappers/config/ConfigSetting.class</include>
                    <include>com/github/jikoo/planarwrappers/config/KeyedSetSetting.class</include>
                    <include>com/github/jikoo/planarwrappers/config/Mapping.class</include>
                    <include>com/github/jikoo/planarwrappers/config/ParsedComplexSetting.class</include>
                    <include>com/github/jikoo/planarwrappers/config/ParsedMapping.class</include>
                    <include>com/github/jikoo/planarwrappers/config/ParsedSetting.class</include>
                    <include>com/github/jikoo/planarwrappers/config/ParsedSimpleSetting.class</include>
                    <include>com/github/jikoo/planarwrappers/config/Setting.class</include>
                    <include>com/github/jikoo/planarwrappers/config/SimpleMultimapSetting.class</include>
                    <include>com/github/jikoo/planarwrappers/config/SimpleSetSetting.class</include>
                    <include>com/github/jikoo/planarwrappers/config/impl/BooleanSetting.class</include>
                    <include>com/github/jikoo/planarwrappers/config/impl/EnumSetting.class</include>
                    <include>com/github/jikoo/planarwrappers/config/impl/MaterialSetSetting.class</include>
                    <include>com/github/jikoo/planarwrappers/function/ThrowingFunction.class</include>
                    <include>com/github/jikoo/planarwrappers/util/Coords.class</include>
                    <include>com/github/jikoo/planarwrappers/util/StringConverters.class</include>
                    <include>com/github/jikoo/planarwrappers/util/WeightedRandom.class</include>
                  </includes>
                </filter>
                <filter>
                  <artifact>com.github.jikoo:PlanarWrappers</artifact>
                  <excludes>
                    <exclude>META-INF/MANIFEST.MF</exclude>
                  </excludes>
                </filter>
              </filters>
              <relocations>
                <relocation>
                  <pattern>com.github.jikoo.planarwrappers</pattern>
                  <shadedPattern>com.github.jikoo.enchantableblocks.planarwrappers</shadedPattern>
                </relocation>
              </relocations>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
